--- a/eve/templates/404.html
+++ b/eve/templates/404.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-    <title>Internal Server Error</title>
+    <title>404 Not Found</title>
 </head>
 <body>
-<h1>Internal Server Error</h1>
+<h1>404 Not Found</h1>
 
 </body>
 </html>
