--- a/eve/templates/404.html
+++ b/eve/templates/404.html
@@ -1,9 +1,5 @@
-<html>
-<head>
-    <title>404 Not Found</title>
-</head>
-<body>
-<h1>404 Not Found</h1>
+{% extends 'error.html' %}
 
-</body>
-</html>
+{% block title %}404 Not Found{% endblock %}
+{% block code %}404{% endblock %}
+{% block text %}404 Not Found{% endblock %}
