--- a/eve/templates/eve/sign_in.html
+++ b/eve/templates/eve/sign_in.html
@@ -33,11 +33,31 @@
 {% endblock %}
 
 {% block container %}
+{% if form.non_field_errors or form.this_is_the_login_form.errors %}
+    {% for error in form.non_field_errors|add:form.this_is_the_login_form.errors %}
+        <div class="alert alert-error">
+            {{ error }}
+        </div>
+    {% endfor %}
+{% endif %}
+
 <form class="form-signin" action="{{ app_path }}" method="post">{% csrf_token %}
     <h2 class="form-signin-heading">{% trans 'Please sign in' %}</h2>
-    {% if not form.this_is_the_login_form.errors %}{{ form.username.errors }}{% endif %}
+    {% if not form.this_is_the_login_form.errors %}
+        <div class="control-group error">
+        {% for error in form.username.errors %}
+            <span class="help-inline">{{ error }}</span>
+        {% endfor %}
+        </div>
+    {% endif %}
     {{ form.username }}
-    {% if not form.this_is_the_login_form.errors %}{{ form.password.errors }}{% endif %}
+    {% if not form.this_is_the_login_form.errors %}
+        <div class="control-group error">
+        {% for error in form.password.errors %}
+            <span class="help-inline">{{ error }}</span>
+        {% endfor %}
+        </div>
+    {% endif %}
     {{ form.password }}
     <button class="btn btn-large btn-primary" type="submit">{% trans 'Sign in' %}</button>
     <input type="hidden" name="this_is_the_login_form" value="1" />
