--- a/eve/templates/eve/home.html
+++ b/eve/templates/eve/home.html
@@ -70,7 +70,14 @@
 
                         last_time = data[data.length - 1][0];
 
-                        $.plot(placeholder, [ data ], options);
+                        // zip the generated y values with the x values
+                        var graph1 = [], graph2 = [];
+                        for (var i = 0; i < data.length; ++i) {
+                            graph1.push([data[i][0], data[i][1][0]]);
+                            graph2.push([data[i][0], data[i][1][1]]);
+                        }
+
+                        $.plot(placeholder, [ graph1, graph2 ], options);
                     }
                 });
             }
